Inserted Similar & Compare Descriptions and included map of regions in all sections

--- a/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
@@ -123,6 +123,15 @@
   <data name="Administrative" xml:space="preserve">
     <value>Administratif</value>
   </data>
+  <data name="altPhotoMap" xml:space="preserve">
+    <value>Image des régions de la GCC</value>
+  </data>
+  <data name="ArcticRegion" xml:space="preserve">
+    <value>La région de l’Arctique comprend le versant nord du Yukon, les Territoires du Nord-Ouest, le Nunavut, le Nunavik, le Nunatsiavut, la baie d’Hudson et la baie James. Ces limites englobent l’Inuit Nunangat.</value>
+  </data>
+  <data name="AtlanticRegion" xml:space="preserve">
+    <value>La région de l'Atlantique comprend le Nouveau-Brunswick, la Nouvelle-Écosse, l'Île-du-Prince-Édouard et Terre-Neuve-et-Labrador, moins la région du Nunatsiavut au Labrador.</value>
+  </data>
   <data name="Business" xml:space="preserve">
     <value>Affaires</value>
   </data>
@@ -132,11 +141,17 @@
   <data name="Categories" xml:space="preserve">
     <value>Catégories</value>
   </data>
+  <data name="CentralRegion" xml:space="preserve">
+    <value>La région du Centre comprend l'Ontario et le Québec, moins la région du Nunavik dans le nord du Québec.</value>
+  </data>
   <data name="CERTIFICATIONS" xml:space="preserve">
     <value>ATTESTATIONS</value>
   </data>
   <data name="Close" xml:space="preserve">
     <value>Fermer</value>
+  </data>
+  <data name="CollegeRegion" xml:space="preserve">
+    <value>Le Collège de la Garde côtière canadienne est une installation de formation maritime nationale qui se trouve sur l'île du Cap-Breton, en Nouvelle-Écosse. Il offre des programmes en français et en anglais à l’appui de sa mission et de son mandat en matière de sûreté et de sécurité maritimes et de protection de l’environnement.</value>
   </data>
   <data name="Commanding Officer" xml:space="preserve">
     <value>COMMANDANT</value>
@@ -198,17 +213,26 @@
   <data name="h2Results" xml:space="preserve">
     <value>Résultats comparant les deux positions</value>
   </data>
+  <data name="HeadQRegion" xml:space="preserve">
+    <value>Le siège social national de la Garde côtière canadienne (GCC) est situé à Ottawa, en Ontario.</value>
+  </data>
   <data name="HighSchool" xml:space="preserve">
     <value>École secondaire</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Accueil</value>
   </data>
+  <data name="linkmap" xml:space="preserve">
+    <value>(cliquez ici pour voir la carte des régions de la GCC)</value>
+  </data>
   <data name="Logistics" xml:space="preserve">
     <value>Logistique</value>
   </data>
   <data name="MAOtext" xml:space="preserve">
     <value>Les positions de commandement des navires diffèrent en outre et de manière significative, en fonction de la taille de la plate-forme, de la puissance, du programme et de la durée sur une plate-forme donnée.</value>
+  </data>
+  <data name="mapSummary" xml:space="preserve">
+    <value>Version texte</value>
   </data>
   <data name="MATCHING CERTIFICATIONS" xml:space="preserve">
     <value>ATTESTATIONS ASSOCIÉES</value>
@@ -218,6 +242,9 @@
   </data>
   <data name="MATCHING REGIONS" xml:space="preserve">
     <value>RÉGIONS ASSOCIÉES</value>
+  </data>
+  <data name="modalTitleMap" xml:space="preserve">
+    <value>Cartes des régions de la GCC</value>
   </data>
   <data name="NoDiff" xml:space="preserve">
     <value>Pas de compétences différentes</value>
@@ -305,5 +332,17 @@
   </data>
   <data name="University" xml:space="preserve">
     <value>Université</value>
+  </data>
+  <data name="WesternRegion" xml:space="preserve">
+    <value>La région de l'Ouest comprend la Colombie-Britannique, l'Alberta, la Saskatchewan, le Manitoba et le Yukon, moins le versant du Yukon.</value>
+  </data>
+  <data name="ÉLÉMENTS DE COMPORTEMENT" xml:space="preserve">
+    <value>ÉLÉMENTS DE COMPORTEMENT : &lt;small style="font-weight:normal;"&gt;Les éléments de comportement sont les comportements ou les attitudes nécessaires pour tout emploi au sein de la Garde côtière canadienne. Nous en avons déterminé sept (7) et inclus un niveau de compétence requis pour chaque poste.&lt;/small&gt;</value>
+  </data>
+  <data name="ÉLÉMENTS DE CONNAISSANCE" xml:space="preserve">
+    <value>ÉLÉMENTS DE CONNAISSANCE : &lt;small style="font-weight:normal;"&gt;Les éléments de connaissance sont une compréhension pratique ou théorique d’un sujet. Il s’agit des renseignements dont vous avez besoin (à partir de votre expérience ou de vos études) pour réussir dans le poste.&lt;/small&gt;</value>
+  </data>
+  <data name="ÉLÉMENTS TECHNIQUES" xml:space="preserve">
+    <value>ÉLÉMENTS TECHNIQUES : &lt;small style="font-weight:normal;"&gt;Les éléments techniques décrivent les capacités d’appliquer les connaissances pour exécuter efficacement le travail.&lt;/small&gt;</value>
   </data>
 </root>
