--- a/Web/Resources/Pages/CCGMember/Details.resx
+++ b/Web/Resources/Pages/CCGMember/Details.resx
@@ -117,8 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="altPhotoMap" xml:space="preserve">
+    <value>Image of the CCG Regions</value>
+  </data>
+  <data name="ArcticRegion" xml:space="preserve">
+    <value>The Arctic Region is inclusive of the Yukon North slope, Northwest  Territories, Nunavut, Nunavik, Nunatsiavut, and Hudson and James Bay. This  boundary is inclusive of Inuit Nunangat.</value>
+  </data>
+  <data name="AtlanticRegion" xml:space="preserve">
+    <value>The Atlantic Region consists of New Brunswick, Nova Scotia,  Prince Edward Island, and Newfoundland and Labrador, minus the Nunatsiavut  region in Labrador.</value>
+  </data>
   <data name="BEHAVIOURAL ELEMENTS" xml:space="preserve">
-    <value>BEHAVIOURAL ELEMENTS</value>
+    <value>BEHAVIOURAL ELEMENTS: &lt;small style="font-weight:normal;"&gt;Behaviour elements are the behaviours or attitudes needed for any job with the Canadian Coast Guard. We identified 7 and included a level of competency required for each job.&lt;/small&gt;</value>
+  </data>
+  <data name="CentralRegion" xml:space="preserve">
+    <value>The Central Region consists of  Ontario and Quebec, minus the Nunavik region in northern Quebec.</value>
   </data>
   <data name="CERTIFICATIONS" xml:space="preserve">
     <value>CERTIFICATIONS</value>
@@ -126,20 +138,32 @@
   <data name="Close" xml:space="preserve">
     <value>Close</value>
   </data>
+  <data name="CollegeRegion" xml:space="preserve">
+    <value>The Canadian Coast Guard College is a national maritime training facility located on Cape Breton Island, Nova Scotia. It delivers programs in French and English to support the College’s mission and mandate in marine safety, security and environmental protection.</value>
+  </data>
   <data name="Commanding Officer" xml:space="preserve">
     <value>COMMANDING OFFICER</value>
   </data>
   <data name="Current Position Details" xml:space="preserve">
     <value>Current Position Details</value>
   </data>
+  <data name="HeadQRegion" xml:space="preserve">
+    <value>The Canadian Coast Guard (CCG) National Headquarters is located in Ottawa, Ontario.</value>
+  </data>
   <data name="KNOWLEDGE ELEMENTS" xml:space="preserve">
-    <value>KNOWLEDGE ELEMENTS</value>
+    <value>KNOWLEDGE ELEMENTS: &lt;small style="font-weight:normal;"&gt;Knowledge elements are practical or theoretical understanding of a subject. It is the information you need (from past experience or education) to succeed in the position.&lt;/small&gt;</value>
   </data>
   <data name="Level" xml:space="preserve">
     <value>Level</value>
   </data>
+  <data name="linkmap" xml:space="preserve">
+    <value>(click here to view the CCG regions map)</value>
+  </data>
   <data name="MAOtext" xml:space="preserve">
     <value>Ship command positions differ additionally, and significantly, dependent on platform size, power, program, and length of time on a given platform.</value>
+  </data>
+  <data name="mapSummary" xml:space="preserve">
+    <value>Text version</value>
   </data>
   <data name="MCTSdesc" xml:space="preserve">
     <value>The Marine Communications and Traffic Services (MCTS) training program is offered in 2 phases. Phase I teaches you the basics of performing the job of an officer and during Phase II you'll learn local geography and regional procedures, while applying the national standards learned in Phase I. For more information about the MCTS program click on the link below.</value>
@@ -158,6 +182,9 @@
   </data>
   <data name="MELDEVUrl" xml:space="preserve">
     <value>https://www.ccg-gcc.gc.ca/careers-carrieres/MELDEV-training-formation-PPTEM/index-eng.html</value>
+  </data>
+  <data name="modalTitleMap" xml:space="preserve">
+    <value>CCG Regions Map</value>
   </data>
   <data name="Next" xml:space="preserve">
     <value>Next</value>
@@ -184,9 +211,12 @@
     <value>Print or download this page as a PDF document</value>
   </data>
   <data name="TECHNICAL ELEMENTS" xml:space="preserve">
-    <value>TECHNICAL ELEMENTS</value>
+    <value>TECHNICAL ELEMENTS: &lt;small style="font-weight:normal;"&gt;Technical elements describe abilities to apply knowledge to efficiently perform the job.&lt;/small&gt;</value>
   </data>
   <data name="USERACTION" xml:space="preserve">
     <value>Click Next to compare or find similar positions within the organization to your selected position below.</value>
+  </data>
+  <data name="WesternRegion" xml:space="preserve">
+    <value>The Western Region consists of  British Columbia, Alberta, Saskatchewan, Manitoba and Yukon, minus the Yukon slope.</value>
   </data>
 </root>
