--- a/Web/Resources/Pages/CCGMember/Similar/SimilarList.resx
+++ b/Web/Resources/Pages/CCGMember/Similar/SimilarList.resx
@@ -126,6 +126,9 @@
   <data name="geo" xml:space="preserve">
     <value>Geographical Information</value>
   </data>
+  <data name="NoPositions" xml:space="preserve">
+    <value>No similar positions are currently available for this position.</value>
+  </data>
   <data name="Save PDF" xml:space="preserve">
     <value>Print or download this page as a PDF document</value>
   </data>
