--- a/Web/Resources/Pages/Student/College/Index.resx
+++ b/Web/Resources/Pages/Student/College/Index.resx
@@ -117,14 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="altsearchseagoing" xml:space="preserve">
+    <value>Link to search seagoing positions</value>
+  </data>
+  <data name="altsearchshoreside" xml:space="preserve">
+    <value>Link to search shore side positions</value>
+  </data>
   <data name="College" xml:space="preserve">
     <value>College</value>
-  </data>
-  <data name="PhotoSeagoing" xml:space="preserve">
-    <value>Photo of the vessel Cape Kuper</value>
-  </data>
-  <data name="PhotoShoreside" xml:space="preserve">
-    <value>Photo of a Canadian Coast Guard member standing in front of a lighthouse</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Previous</value>
@@ -135,19 +135,25 @@
   <data name="Seagoing" xml:space="preserve">
     <value>Seagoing Positions</value>
   </data>
-  <data name="seagoingincludes" xml:space="preserve">
-    <value>(includes Ships' Officer and Ships' Crew)</value>
+  <data name="seagoingbutton" xml:space="preserve">
+    <value>Search seagoing positions</value>
   </data>
   <data name="Shoreside" xml:space="preserve">
     <value>Shore side Positions</value>
   </data>
-  <data name="shoresideincludes" xml:space="preserve">
-    <value>(includes Administrative, Computer and Trades)</value>
+  <data name="shoresidebutton" xml:space="preserve">
+    <value>Search shore side positions</value>
   </data>
   <data name="Student" xml:space="preserve">
     <value>Student</value>
   </data>
   <data name="TechCollege" xml:space="preserve">
     <value>Technical College</value>
+  </data>
+  <data name="textseagoing" xml:space="preserve">
+    <value>The Canadian Coast Guard workforce is made up of about 60% seagoing personnel. On every ship in Canada and the world, there are two types of seafarer: ships’ officers (SOs) and ships’ crews (SCs). The officers are the ones in charge and the crews carry out the skilled work aboard ship. Similarly, in every ship there are three main departments: deck/navigation, engineering, and logistics. Within the officer and crew cadres there are hierarchies associated with time doing a given job, experience working on certain seagoing platforms, and training. The captain is the top officer of a ship and a navigation officer; the chief engineer is the top engineer of a ship. Beneath these there are lower ranking officers and then crew.</value>
+  </data>
+  <data name="textshoreside" xml:space="preserve">
+    <value>About 40% of the Canadian Coast Guard workforce is made up of people working in shore-based jobs. The overall function of these positions is to support coast guard operations. They do not involve working on coast guard floating assets. Instead, they can be operational (e.g. communications, environmental, logistics, etc.) or administrative (e.g. management, planning, policy, etc.).</value>
   </data>
 </root>
