Add french translation for NA, issue #187. Fix heading percentage values in simlar search.

--- a/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
@@ -246,6 +246,9 @@
   <data name="modalTitleMap" xml:space="preserve">
     <value>Cartes des régions de la GCC</value>
   </data>
+  <data name="N/A" xml:space="preserve">
+    <value>S/O</value>
+  </data>
   <data name="NoDiff" xml:space="preserve">
     <value>Pas de compétences différentes</value>
   </data>
